# timeout

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  PUBLICATION_CHECKLIST.md  README.md  SECURITY.md  advanced_examples.md  advanced_features_doc.md  critical_improvements_impl.md  demo-features.sh  implementation_summary.md  improvements_report.md  install-completions.sh  optional_enhancements_doc.md  optional_enhancements_summary.md  optional_quick_ref.md  platform_summary.md  platform_support_doc.md  quick_reference.md  recommended_improvements_doc.md  recommended_quick_ref.md  recommended_summary.md  rust_timeout_guide.md  rust_timeout_readme.md  rust_timeout_tests.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: args.rs  main.rs
src/platform/: mod.rs  unix.rs  windows.rs
