[package]
name = "timeout"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "A Rust implementation of the GNU timeout command"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
thiserror = "1.0"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "resource"] }

[target.'cfg(any(target_os = "freebsd", target_os = "dragonfly"))'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "resource"] }

[target.'cfg(any(target_os = "macos", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true